kubernetes/apps/forgejo-system/renovate/operator/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: renovate-operator-egress-internal
specs:
  - endpointSelector:
      matchLabels:
        batch.kubernetes.io/job-name: renovate-operator-crd-install
    egress:
      - toEntities:
          - kube-apiserver
